[metadata]
name = lektor-datetime-helpers
description = Lektor plugin to help with dates and times
long_description = file: README.rst, CHANGES.rst
keywords = lektor, date, datetime
url = https://github.com/dairiki/lektor-datetime-helpers
author = Jeff Dairiki
author_email = dairiki@dairiki.org
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Environment :: Web Environment
    Framework :: Lektor
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP

[options]
py_modules = lektor_datetime_helpers
install_requires =
    # tzlocal >= 3 drops python 2 support (and also switches from pytz to zoneinfo)
    tzlocal < 3
setup_requires =
    setuptools >= 40
    setuptools_scm

[options.entry_points]
lektor.plugins =
    datetime-helpers = lektor_datetime_helpers:DatetimeHelpersPlugin

[bdist_wheel]
universal = 1
